--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <img src="assets/img/archi - Copie.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Architecture & Interior Design</h4>
-                                <a href=""><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="index4.html" target="_blank"><span class="glyphicon glyphicon-eye-open"></span></a>
 
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
