--- a/index4.html
+++ b/index4.html
@@ -60,29 +60,8 @@ body {
 </style>
 </head>
 <body>
+<h1>we have some problems in this page we going to fix it as soon as possible</h1>
 
-<!-- Header -->
-<div class="header">
-  <h1>Graphic Design</h1>
-  <p>Resize the browser window to see the responsive effect.</p>
-</div>
-
-<!-- Photo Grid -->
-<div class="row"> 
-  <div class="column" >
-    <img src="img/Untitled-1.png" style="width:100%">
-
-
-  </div>
-  <div class="column" >
-  <img src="img/Asset 2@2x.png" style="width:100%">
-  </div>
-  <div class="column" >
-  <img src="img/yume MENU.png" style="width:100%">
-  </div>
-  <div class="column" >
-  <img src="img/Asset 3@2x.png" style="width:100%">
-  </div>
 </div>
 </body>
 </html>
